Fixed the alignment issues of the logo, changed up the animations so they run smoother and added animations for the titles aswell

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,5 +1,6 @@
 body {
     overflow-x: hidden;
+    height: 100%;
 }
 
 /* FONTS */
@@ -10,7 +11,7 @@ body {
 
 @font-face {
     font-family: playfair-display;
-    src: url('fonts/playfair-display-regular');
+    src: url('fonts/playfair-bold.ttf');
 }
 
 /* FONT STYLING */
